@@ -1,3 +1,9 @@
+2003-02-18  Ian Roxborough  <irox@ix.netcom.com>
+
+	* gui/text.tcl (tkTextUndoPop): When they are no
+	more undo operations on the undo stack, tell the
+	editor to reset the modified status to unmodified.
+
 2003-02-17  Ian Roxborough  <irox@ix.netcom.com>
 
 	* gui/projmng.tcl (sn_select_project): On a
